--- a/crit_PauseMenu/public/client/html/style.css
+++ b/crit_PauseMenu/public/client/html/style.css
@@ -175,7 +175,7 @@ body {
 	backdrop-filter: blur(5px);
 }
 
-.setReady {
+.socialsHeader {
 	background-image: linear-gradient(
 			to top,
 			rgba(0, 0, 0, 0.405),
@@ -185,7 +185,17 @@ body {
 	background-size: cover;
 }
 
-.setHeli {
+.mapHeader {
+	background-image: linear-gradient(
+			to top,
+			rgba(0, 0, 0, 0.405),
+			rgba(0, 0, 0, 0.1)
+		),
+		url(img/setRobber.webp);
+	background-size: cover;
+}
+
+.settingsHeader {
 	background-image: linear-gradient(
 			to top,
 			rgba(0, 0, 0, 0.405),
@@ -195,33 +205,13 @@ body {
 	background-size: cover;
 }
 
-.setCopVeh {
+.galleryHeader {
 	background-image: linear-gradient(
 			to top,
 			rgba(0, 0, 0, 0.405),
 			rgba(0, 0, 0, 0.1)
 		),
 		url(img/setCopVeh.webp);
-	background-size: cover;
-}
-
-.setRobVeh {
-	background-image: linear-gradient(
-			to top,
-			rgba(0, 0, 0, 0.405),
-			rgba(0, 0, 0, 0.1)
-		),
-		url(img/setRobVeh.webp);
-	background-size: cover;
-}
-
-.setRobber {
-	background-image: linear-gradient(
-			to top,
-			rgba(0, 0, 0, 0.405),
-			rgba(0, 0, 0, 0.1)
-		),
-		url(img/setRobber.webp);
 	background-size: cover;
 }
 
@@ -368,7 +358,7 @@ body {
 	color: #fafafa;
 }
 
-/* INFO PANEL */
+/* INFO PANEL & LEAVE SERVER PANEL */
 .info-panel h3,
 .leave-server-panel h3 {
 	margin-bottom: 2rem;
@@ -477,23 +467,20 @@ a:active {
 
 /* PLAYER TABLE */
 
-.players-panel,
-.leaderboard-panel {
+.players-panel {
 	width: 100%;
 	height: 100%;
 	/* background-color: rgba(10, 10, 10, 0.75); */
 }
 
-.players-panel table,
-.leaderboard-panel table {
+.players-panel table {
 	width: 100%;
 	text-align: center;
 	font-size: 1.5rem;
 	border-collapse: collapse;
 }
 
-.players-panel th,
-.leaderboard-panel th {
+.players-panel th {
 	font-size: 1.8rem;
 	font-weight: 400;
 	color: #fafafa;
@@ -503,8 +490,7 @@ a:active {
 	width: 0;
 }
 
-.players-panel tbody,
-.leaderboard-panel tbody {
+.players-panel tbody {
 	display: flex;
 	flex-direction: column;
 	gap: 0.2rem;
@@ -513,15 +499,13 @@ a:active {
 	overflow-y: scroll;
 }
 
-.players-panel tr,
-.leaderboard-panel tr {
+.players-panel tr {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
 }
 
-.players-panel tbody td,
-.leaderboard-panel tbody td {
+.players-panel tbody td {
 	padding: 0.8rem 1rem;
 	font-weight: 600;
 	color: #fafafa;
@@ -530,18 +514,15 @@ a:active {
 	width: 0;
 }
 
-.players-panel tr:first-child,
-.leaderboard-panel tr:first-child {
+.players-panel tr:first-child {
 	background-color: rgb(21, 136, 217) !important;
 	margin-bottom: 1rem;
 }
 
-.players-panel tbody tr:nth-child(odd),
-.leaderboard-panel tr:nth-child(odd) {
+.players-panel tbody tr:nth-child(odd) {
 	background-color: rgba(0, 0, 0, 0.576);
 }
 
-.players-panel tbody tr:nth-child(even),
-.leaderboard-panel tr:nth-child(even) {
+.players-panel tbody tr:nth-child(even) {
 	background-color: rgba(0, 0, 0, 0.408);
 }
